fixed scroll bar jump

--- a/src/documents/styles/style.css.less
+++ b/src/documents/styles/style.css.less
@@ -18,6 +18,10 @@
 	font-weight: 600;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 html,
 body {
 	color: #666;
